ubuntu-release-upgrader (1:18.04.6) UNRELEASED; urgency=medium

  * DistUpgradeFetcherKDE.py:
    - ensure theming is correct across all Qt versions and Plasma versions
    - drop unused openUrl helper (replaced by QUrlOpener)

 -- Harald Sitter <sitter@kde.org>  Fri, 19 Jan 2018 13:34:32 +0100

ubuntu-release-upgrader (1:18.04.5) bionic; urgency=medium

  * DistUpgrade/DistUpgradeFetcher.py,
    check-new-release-gtk,
    do-release-upgrade:
    - Raise privileges in do-release-upgrade using pkexec when GUI is used
    - Drop gksu usage
    - Use os.execv in check-new-release-gtk instead of os.execl
    - Apply the workaround "xhost +si:localuser:root" under Wayland to let
      upgrades finish (LP: #1732185)
  * Skip Python files from other packages in PEP 8 tests

 -- Balint Reczey <rbalint@ubuntu.com>  Mon, 15 Jan 2018 17:09:44 +0100

ubuntu-release-upgrader (1:18.04.4) bionic; urgency=medium

  * DistUpgradeController.py: Check that /boot/efi is a rw-mounted partition
    if we are upgrading an EFI system with bootloader (LP: #1695666)

 -- Julian Andres Klode <juliank@ubuntu.com>  Fri, 12 Jan 2018 15:37:01 +0100

ubuntu-release-upgrader (1:18.04.3) bionic; urgency=medium

  * data/release-upgrades: switch prompt from normal to LTS (LP: #1740523)

 -- Brian Murray <brian@ubuntu.com>  Tue, 02 Jan 2018 13:46:53 -0800

ubuntu-release-upgrader (1:18.04.2) bionic; urgency=medium

  * DistUpgrade/DistUpgradeController.py: Provide a better error message if
    /var does not have enough free space and a generic fallback error message
    if it is a parition without a specific remedy. (LP: #1729368)

 -- Brian Murray <brian@ubuntu.com>  Wed, 08 Nov 2017 11:15:54 -0800

ubuntu-release-upgrader (1:18.04.1) bionic; urgency=medium

  * DistUpgrade/{EOL,Devel}ReleaseAnnouncement,
    DistUpgrade/window_main.ui,
    data/gtkbuilder/DistUpgrade.ui,
    data/DistUpgrade.cfg,
    data/DistUpgrade.cfg.xenial,
    pre-build.sh:
    - updated for 17.10 -> 18.04
